frontend/styles/style.css
:root {
  --bg-primary: #f1e8d4;
  --bg-accent: #f1e8d4;
  --bg-level: #cae3f6;

  --action: black;

  --border: black;

  --text-on-primary: black;
  --text-on-accent: black;
  --text-on-action: #f1e8d4;
}

[data-theme="dark"] {
  --bg-primary: #2A2722;
  --bg-accent: #2A2722;
  --bg-level: #659BFF;

  --action: white;

  --border: white;

  --text-on-primary: white;
  --text-on-accent: white;
  --text-on-action: #2A2722;
}

* {
  color: var(--text-on-primary);
}

.svg {
  mask-size: contain;
  mask-repeat: no-repeat;
  mask-position: center;
  background-color: var(--text-on-primary);
  height: 50px;
  width: 50px;
}

body {
  background-color: var(--bg-primary);
  font-family: "Fredoka", sans-serif;
  margin: 0;
  scrollbar-width: none;
  width: 100vw;
  height: 100vh;
  overflow: hidden;
}

.grid {
  width: 100vw;
  height: 100vh;
  display: grid;
  grid-template-columns: 1fr auto;
  grid-template-rows: 80px 1fr 20px;
  grid-template-areas:
    "topbar topbar"
    "game sidebar"
    "bottom-bar sidebar";
}

.hidden {
  display: none !important;
}

.save-utils {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: right;
}

.saving {
  display: flex;
  flex-direction: row;
  gap: 10px;
  align-items: center;
  margin-right: 10px;
}

.saving.hidden {
  display: none;
}

.loading {
  height: 15px;
  aspect-ratio: 1;
  border-top: 1px solid var(--border);
  border-radius: 50%;
  animation: spin 1s linear infinite;
  transform-origin: center;
}

@keyframes spin {
  to {
    transform: rotate(360deg);
  }
}

.login {
  background-color: var(--bg-primary);
  border-radius: 20px;
  z-index: 10;
  padding: 20px
}

.grid-uihidden {
  grid-template-columns: 1fr 0px;
  grid-template-rows: 80px 1fr 0px;
}

.grid-uihidden ::after {
  display: none;
}

.topbar {
  grid-area: topbar;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.topbar .main {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 20px;
}

.topbar .link-wrapper {
  display: flex;
  flex-direction: row;
  align-items: center;
  gap: 10px;
}

.topbar .link-wrapper img {
  width: 25px;
  aspect-ratio: 1;
}

.topbar .main a.main-link {
  color: var(--text-on-primary);
  font-size: 20px;
}

.actions img.help {
  width: 45px;
  aspect-ratio: 1;
}

.actions img.menu-button {
  aspect-ratio: 1;
  width: 40px;
}

.sidebar {
  grid-area: sidebar;
  overflow: hidden;
  min-height: 0;
  height: 100%;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  scrollbar-width: none;
}

.sidebar-two {
  width: 80px;
  height: 100%;
  display: flex;
  min-height: 0;
  flex-direction: column;
  align-items: center;
  justify-content: space-between;
  box-sizing: border-box;
}

/* here we go... */
.svg.arrow-right {
  width: 25px;
  height: 25px;
  mask-image: url('/assets/icons/arrow-right.svg')
}

.zoom .svg {
  width: 35px;
  height: 35px;
  margin: 15px 0;
}

.categories .svg {
  width: 60px;
  height: 60px;
  margin-bottom: 20px;
}

.zoom .plus {
  mask-image: url('/assets/icons/plus.svg');
}

.zoom .minus {
  mask-image: url('/assets/icons/minus.svg');
}

.svg.mechanics {
  mask-image: url('/assets/icons/mechanics.svg');
}

.svg.triggers {
  mask-image: url('/assets/icons/triggers.svg');
}

.svg.mobs {
  mask-image: url('/assets/icons/mobs.svg');
}

.svg.hazards {
  mask-image: url('/assets/icons/hazards.svg');
}

.svg.powerups {
  mask-image: url('/assets/icons/powerups.svg')
}

.svg.collectibles {
  mask-image: url('/assets/icons/collectibles.svg')
}

.svg.blocks {
  mask-image: url('/assets/icons/blocks.svg')
}

.svg.eraser {
  mask-image: url('/assets/icons/erase.svg')
}

.sidebar-one {
  width: auto;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: end;
  overflow-y: scroll;
  scrollbar-width: none;
}

.bottom-bar {
  display: flex;
  justify-content: space-between;
  padding: 0 5px;
  grid-area: bottom-bar;
}

.left-info,
.right-info {
  display: flex;
  flex-direction: row;
  gap: 5px;
}

.left-info p,
.right-info p {
  margin: 0;
  font-size: 17px;
  font-weight: 350;
  padding-bottom: 4px;
}

.category-blocks {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: end;
  border-right: 4px solid var(--bg-accent);
  margin-bottom: 10px;
  box-sizing: border-box;
  transform: translateX(4px)
}

.category-blocks>* {
  margin: 10px 0;
  height: 50px;
  width: 50px;
  padding: 5px 15px;
  image-rendering: pixelated;
}

.tile-select {
  height: 50px;
  width: 50px;
  image-rendering: pixelated;
}


.categories {
  overflow: scroll;
  scrollbar-width: none;
  width: 100%;
  display: flex;
  flex-direction: column;
  align-self: center;
  align-items: center;
  justify-self: end;
  box-sizing: border-box;
}

.category {
  cursor: pointer;
}

.categories:has(.active) {
  border-left: 4px solid var(--bg-accent);
}

.categories div.active::after {
  content: '';
  position: absolute;
  transform: translateY(175%) translateX(-76px) rotate(45deg);
  width: 10px;
  height: 10px;
  background-color: var(--bg-primary);
  border-right: 4px solid var(--bg-accent);
  border-top: 4px solid var(--bg-accent);
  border-radius: 2px;
}

.zoom {
  display: flex;
  flex-direction: column;
  justify-content: left;
  align-items: center;
}

.zoom img {
  width: 35px;
  height: 35px;
  margin: 15px auto;
}


.tile-selection {
  overflow-y: scroll;
  scrollbar-width: none;
  flex: 1;
  width: 80px;
  min-height: 0;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: end;
}

.tile-select-container {
  cursor: pointer;
}

div.eraser>img {
  width: 50px;
  height: 50px;
}

.tile-selection img {
  width: 60px;
  height: 60px;
  image-rendering: pixelated;
  user-select: none;
  margin-bottom: 20px;
}

.actions {
  display: flex;
  flex-direction: row;
  align-items: center;
  object-fit: cover;
}

.actions>* {
  margin-right: 20px;
}
/* ... */

